--- a/gk.bib
+++ b/gk.bib
@@ -29606,3 +29606,13 @@
   year={1992},
   publisher={JSTOR}
 }
+@article{lazarsfeld1948use,
+  title={The use of panels in social research},
+  author={Lazarsfeld, Paul F},
+  journal={Proceedings of the American Philosophical Society},
+  volume={92},
+  number={5},
+  pages={405--410},
+  year={1948},
+  publisher={JSTOR}
+}
