--- a/gk.bib
+++ b/gk.bib
@@ -3,7 +3,7 @@
 % To add references, first please CHECK that it doesn't already
 %      exist in this file and then add entries only at the end.
 %
-% Use these rules for the reference label:
+% Use these rules for the reference label:  Either use Google Scholar's key or:
 %
 % -if one author: use last name and last 2 digits of the year: Tobler79.
 % -if multiple authors, use first 3 letters of each of UP TO the first three
@@ -14,8 +14,8 @@
 % -feel free to use the abbreviations at the start, or add to them.
 % -Use authors full names when known.
 %
-% please be sure to commit changes regularly as a number of
-% people are all using this at the same time.
+% please be sure to commit changes regularly as many people may be 
+% using this at the same time.
 
 @STRING{ prq = "Political Research Quarterly"}
 @STRING{ apsr = "American Political Science Review"}
