--- a/gk.bib
+++ b/gk.bib
@@ -29547,13 +29547,13 @@
   publisher = {Wiley Online Library}
 }
 @article{converse2006nature,
-  title     = {The nature of belief systems in mass publics (1964)},
+  title     = {The nature of belief systems in mass publics},
   author    = {Converse, Philip E},
   journal   = {Critical review},
   volume    = {18},
   number    = {1-3},
   pages     = {1--74},
-  year      = {2006},
+  year      = {2006 (originally 1964)},
   publisher = {Taylor \& Francis}
 }
 @article{schwarz2007attitude,
