--- a/gk.bib
+++ b/gk.bib
@@ -29616,3 +29616,18 @@
   year={1948},
   publisher={JSTOR}
 }
+@article{stantcheva2023run,
+  title={How to run surveys: A guide to creating your own identifying variation and revealing the invisible},
+  author={Stantcheva, Stefanie},
+  journal={Annual Review of Economics},
+  volume={15},
+  pages={205--234},
+  year={2023},
+  publisher={Annual Reviews}
+}
+@book{vannette2017palgrave,
+  title={The Palgrave handbook of survey research},
+  author={Vannette, David L and Krosnick, Jon A},
+  year={2017},
+  publisher={Springer}
+}
