--- a/gk.bib
+++ b/gk.bib
@@ -29631,3 +29631,13 @@
   year={2017},
   publisher={Springer}
 }
+@article{hill2001extension,
+  title={An extension and test of Converse’s “black-and-white” model of response stability},
+  author={Hill, Jennifer L},
+  journal={American Political Science Review},
+  volume={95},
+  number={2},
+  pages={397--413},
+  year={2001},
+  publisher={Cambridge University Press}
+}
