--- a/gk.bib
+++ b/gk.bib
@@ -29641,3 +29641,18 @@
   year={2001},
   publisher={Cambridge University Press}
 }
+@incollection{isenberg2022commitment,
+  title={Commitment and Consistency},
+  author={Isenberg, Naomi and Brauer, Markus},
+  editor={R.A.R.\ Gurung},
+  booktitle={The Routledge Research Encyclopedia of Psychology Applied
+to Everyday Life},
+  year={2022},
+  publisher={Routledge}
+}
+@book{gilbert2009stumbling,
+  title={Stumbling on happiness},
+  author={Gilbert, Daniel},
+  year={2009},
+  publisher={Vintage Canada}
+}
