--- a/gk.bib
+++ b/gk.bib
@@ -29656,3 +29656,13 @@ to Everyday Life},
   year={2009},
   publisher={Vintage Canada}
 }
+@article{gilbert1998immune,
+  title={Immune neglect: a source of durability bias in affective forecasting.},
+  author={Gilbert, Daniel T and Pinel, Elizabeth C and Wilson, Timothy D and Blumberg, Stephen J and Wheatley, Thalia P},
+  journal={Journal of personality and social psychology},
+  volume={75},
+  number={3},
+  pages={617},
+  year={1998},
+  publisher={American Psychological Association}
+}
