--- a/gk.bib
+++ b/gk.bib
@@ -29666,3 +29666,23 @@ to Everyday Life},
   year={1998},
   publisher={American Psychological Association}
 }
+@article{achen1975mass,
+  title={Mass political attitudes and the survey response},
+  author={Achen, Christopher H},
+  journal={American Political Science Review},
+  volume={69},
+  number={4},
+  pages={1218--1231},
+  year={1975},
+  publisher={Cambridge University Press}
+}
+@article{erikson1979src,
+  title={The SRC panel data and mass political attitudes},
+  author={Erikson, Robert S},
+  journal={British Journal of Political Science},
+  volume={9},
+  number={1},
+  pages={89--114},
+  year={1979},
+  publisher={Cambridge University Press}
+}
