--- a/gk.bib
+++ b/gk.bib
@@ -29573,7 +29573,7 @@
   publisher = {Princeton University Press}
 }
 @article{sperber2010epistemic,
-  author    = {Sperber, Dan and Cl{\'e}ment, Fabrice and Heintz, Christophe and Mascaro, Olivier and Mercier, Hugo and Origgi, Gloria and Wilson, Deirdre},
+  author    = {Sperber, Dan and Clement, Fabrice and Heintz, Christophe and Mascaro, Olivier and Mercier, Hugo and Origgi, Gloria and Wilson, Deirdre},
   title={Epistemic vigilance},
   journal   = {Mind \& language},
   volume    = {25},
