--- a/gk.bib
+++ b/gk.bib
@@ -29686,3 +29686,42 @@
   year      = {1979},
   publisher = {Cambridge University Press}
 }
+@article{lim2010secular,
+  title={Secular and liminal: Discovering heterogeneity among religious nones},
+  author={Lim, Chaeyoon and MacGregor, Carol Ann and Putnam, Robert D},
+  journal={Journal for the Scientific Study of Religion},
+  volume={49},
+  number={4},
+  pages={596--618},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{kustov2021stability,
+  title={The stability of immigration attitudes: Evidence and implications},
+  author={Kustov, Alexander and Laaker, Dillon and Reller, Cassidy},
+  journal={The Journal of Politics},
+  volume={83},
+  number={4},
+  pages={1478--1494},
+  year={2021},
+  publisher={The University of Chicago Press Chicago, IL}
+}
+@article{kang2014time,
+  title={Time discounting and smoking behavior: evidence from a panel survey},
+  author={Kang, Myong-Il and Ikeda, Shinsuke},
+  journal={Health economics},
+  volume={23},
+  number={12},
+  pages={1443--1464},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+@article{preuss2021intra,
+  title={Intra-individual stability of two survey measures on forward-looking attitude},
+  author={Preuss, Malte},
+  journal={Journal of Economic Behavior \& Organization},
+  volume={190},
+  pages={201--227},
+  year={2021},
+  publisher={Elsevier}
+}
