--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -967,7 +967,7 @@
   pages   = {191--207},
   month   = 2,
   number  = {1},
-  note    = {{http://gking.harvard.edu/files/abs/vign-abs.shtml}}
+  note    = {{GaryKing.org/files/abs/vign-abs.shtml}}
 }
 
 @article{KinRosTan07,
