--- a/gk.bib
+++ b/gk.bib
@@ -29725,3 +29725,32 @@
   year={2021},
   publisher={Elsevier}
 }
+@article{schaeffer2020advances,
+  title={Advances in the science of asking questions},
+  author={Schaeffer, Nora Cate and Dykema, Jennifer},
+  journal={Annual Review of Sociology},
+  volume={46},
+  pages={37--60},
+  year={2020},
+  publisher={Annual Reviews}
+}
+@article{tourangeau2021survey,
+  title={Survey reliability: models, methods, and findings},
+  author={Tourangeau, Roger},
+  journal={Journal of Survey Statistics and Methodology},
+  volume={9},
+  number={5},
+  pages={961--991},
+  year={2021},
+  publisher={Oxford University Press}
+}
+@article{alwin1991reliability,
+  title={The reliability of survey attitude measurement: The influence of question and respondent attributes},
+  author={Alwin, Duane F and Krosnick, Jon A},
+  journal={Sociological methods \& research},
+  volume={20},
+  number={1},
+  pages={139--181},
+  year={1991},
+  publisher={Sage Publications}
+}
