--- a/gk.bib
+++ b/gk.bib
@@ -29754,3 +29754,42 @@
   year      = {1991},
   publisher = {Sage Publications}
 }
+@article{raichle2015brain,
+  title={The brain's default mode network},
+  author={Raichle, Marcus E},
+  journal={Annual review of neuroscience},
+  volume={38},
+  pages={433--447},
+  year={2015},
+  publisher={Annual Reviews}
+}
+@article{weissman2006neural,
+  title={The neural bases of momentary lapses in attention},
+  author={Weissman, Daniel H and Roberts, KC and Visscher, KM and Woldorff, MG},
+  journal={Nature neuroscience},
+  volume={9},
+  number={7},
+  pages={971--978},
+  year={2006},
+  publisher={Nature Publishing Group US New York}
+}
+@article{kane2017whom,
+  title={For whom the mind wanders, and when, varies across laboratory and daily-life settings},
+  author={Kane, Michael J and Gross, Georgina M and Chun, Charlotte A and Smeekens, Bridget A and Meier, Matt E and Silvia, Paul J and Kwapil, Thomas R},
+  journal={Psychological science},
+  volume={28},
+  number={9},
+  pages={1271--1289},
+  year={2017},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{baird2011back,
+  title={Back to the future: Autobiographical planning and the functionality of mind-wandering},
+  author={Baird, Benjamin and Smallwood, Jonathan and Schooler, Jonathan W},
+  journal={Consciousness and cognition},
+  volume={20},
+  number={4},
+  pages={1604--1611},
+  year={2011},
+  publisher={Elsevier}
+}
