--- a/gk.bib
+++ b/gk.bib
@@ -29793,3 +29793,101 @@
   year={2011},
   publisher={Elsevier}
 }
+@article{larson2009cortical,
+  title={Cortical network functional connectivity in the descent to sleep},
+  author={Larson-Prior, Linda J and Zempel, John M and Nolan, Tracy S and Prior, Fred W and Snyder, Abraham Z and Raichle, Marcus E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={11},
+  pages={4489--4494},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+@article{horovitz2008low,
+  title={Low frequency BOLD fluctuations during resting wakefulness and light sleep: A simultaneous EEG-fMRI study},
+  author={Horovitz, Silvina G and Fukunaga, Masaki and de Zwart, Jacco A and van Gelderen, Peter and Fulton, Susan C and Balkin, Thomas J and Duyn, Jeff H},
+  journal={Human brain mapping},
+  volume={29},
+  number={6},
+  pages={671--682},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{shulman1997common,
+  title={Common blood flow changes across visual tasks: I. Increases in subcortical structures and cerebellum but not in nonvisual cortex},
+  author={Shulman, Gordon L and Corbetta, Maurizio and Buckner, Randy L and Fiez, Julie A and Miezin, Francis M and Raichle, Marcus E and Petersen, Steven E},
+  journal={Journal of cognitive neuroscience},
+  volume={9},
+  number={5},
+  pages={624--647},
+  year={1997},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+@article{raichle2001default,
+  title={A default mode of brain function},
+  author={Raichle, Marcus E and MacLeod, Ann Mary and Snyder, Abraham Z and Powers, William J and Gusnard, Debra A and Shulman, Gordon L},
+  journal={Proceedings of the national academy of sciences},
+  volume={98},
+  number={2},
+  pages={676--682},
+  year={2001},
+  publisher={National Acad Sciences}
+}
+@article{andrews2010evidence,
+  title={Evidence for the default network's role in spontaneous cognition},
+  author={Andrews-Hanna, Jessica R and Reidler, Jay S and Huang, Christine and Buckner, Randy L},
+  journal={Journal of neurophysiology},
+  volume={104},
+  number={1},
+  pages={322--335},
+  year={2010},
+  publisher={American Physiological Society Bethesda, MD}
+}
+@article{christoff2016mind,
+  title={Mind-wandering as spontaneous thought: a dynamic framework},
+  author={Christoff, Kalina and Irving, Zachary C and Fox, Kieran CR and Spreng, R Nathan and Andrews-Hanna, Jessica R},
+  journal={Nature reviews neuroscience},
+  volume={17},
+  number={11},
+  pages={718--731},
+  year={2016},
+  publisher={Nature Publishing Group UK London}
+}
+@article{danckert2018boredom,
+  title={Boredom, sustained attention and the default mode network},
+  author={Danckert, James and Merrifield, Colleen},
+  journal={Experimental brain research},
+  volume={236},
+  pages={2507--2518},
+  year={2018},
+  publisher={Springer}
+}
+@article{walker2018mind,
+  title={Mind-wandering while driving: The impact of fatigue, task length, and sustained attention abilities},
+  author={Walker, Heather EK and Trick, Lana M},
+  journal={Transportation research part F: traffic psychology and behaviour},
+  volume={59},
+  pages={81--97},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{wong2023reconceptualizing,
+  title={Reconceptualizing mind wandering from a switching perspective},
+  author={Wong, Yi-Sheng and Willoughby, Adrian R and Machado, Liana},
+  journal={Psychological research},
+  volume={87},
+  number={2},
+  pages={357--372},
+  year={2023},
+  publisher={Springer}
+}
+@article{smallwood2013distinguishing,
+  title={Distinguishing how from why the mind wanders: a process--occurrence framework for self-generated mental activity.},
+  author={Smallwood, Jonathan},
+  journal={Psychological bulletin},
+  volume={139},
+  number={3},
+  pages={519},
+  year={2013},
+  publisher={American Psychological Association}
+}
