--- a/gk.bib
+++ b/gk.bib
@@ -29891,3 +29891,52 @@
   year={2013},
   publisher={American Psychological Association}
 }
+@article{christoff2009experience,
+  title={Experience sampling during fMRI reveals default network and executive system contributions to mind wandering},
+  author={Christoff, Kalina and Gordon, Alan M and Smallwood, Jonathan and Smith, Rachelle and Schooler, Jonathan W},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={21},
+  pages={8719--8724},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+@article{kucyi2013mind,
+  title={Mind wandering away from pain dynamically engages antinociceptive and default mode brain networks},
+  author={Kucyi, Aaron and Salomons, Tim V and Davis, Karen D},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={110},
+  number={46},
+  pages={18692--18697},
+  year={2013},
+  publisher={National Acad Sciences}
+}
+@article{stawarczyk2011neural,
+  title={Neural correlates of ongoing conscious experience: both task-unrelatedness and stimulus-independence are related to default network activity},
+  author={Stawarczyk, David and Majerus, Steve and Maquet, Pierre and D'Argembeau, Arnaud},
+  journal={PloS one},
+  volume={6},
+  number={2},
+  pages={e16997},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+@article{seli2016mind,
+  title={Mind-wandering with and without intention},
+  author={Seli, Paul and Risko, Evan F and Smilek, Daniel and Schacter, Daniel L},
+  journal={Trends in cognitive sciences},
+  volume={20},
+  number={8},
+  pages={605--617},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{ciaramelli2019mind,
+  title={A mind free to wander: neural and computational constraints on spontaneous thought},
+  author={Ciaramelli, Elisa and Treves, Alessandro},
+  journal={Frontiers in psychology},
+  volume={10},
+  pages={39},
+  year={2019},
+  publisher={Frontiers Media SA}
+}
