--- a/gk.bib
+++ b/gk.bib
@@ -29940,3 +29940,51 @@
   year={2019},
   publisher={Frontiers Media SA}
 }
+@article{alvarez2019paying,
+  title={Paying attention to inattentive survey respondents},
+  author={Alvarez, R Michael and Atkeson, Lonna Rae and Levin, Ines and Li, Yimeng},
+  journal={Political Analysis},
+  volume={27},
+  number={2},
+  pages={145--162},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+@article{meade2012identifying,
+  title={Identifying careless responses in survey data.},
+  author={Meade, Adam W and Craig, S Bartholomew},
+  journal={Psychological methods},
+  volume={17},
+  number={3},
+  pages={437},
+  year={2012},
+  publisher={American Psychological Association}
+}
+@article{huang2012detecting,
+  title={Detecting and deterring insufficient effort responding to surveys},
+  author={Huang, Jason L and Curran, Paul G and Keeney, Jessica and Poposki, Elizabeth M and DeShon, Richard P},
+  journal={Journal of Business and Psychology},
+  volume={27},
+  pages={99--114},
+  year={2012},
+  publisher={Springer}
+}
+@article{hasenkamp2012mind,
+  title={Mind wandering and attention during focused meditation: a fine-grained temporal analysis of fluctuating cognitive states},
+  author={Hasenkamp, Wendy and Wilson-Mendenhall, Christine D and Duncan, Erica and Barsalou, Lawrence W},
+  journal={Neuroimage},
+  volume={59},
+  number={1},
+  pages={750--760},
+  year={2012},
+  publisher={Elsevier}
+}
+@article{grandchamp2014oculometric,
+  title={Oculometric variations during mind wandering},
+  author={Grandchamp, Romain and Braboszcz, Claire and Delorme, Arnaud},
+  journal={Frontiers in psychology},
+  volume={5},
+  pages={31},
+  year={2014},
+  publisher={Frontiers Media SA}
+}
