--- a/gk.bib
+++ b/gk.bib
@@ -29988,3 +29988,13 @@
   year={2014},
   publisher={Frontiers Media SA}
 }
+@article{sender2021distribution,
+  title={The distribution of cellular turnover in the human body},
+  author={Sender, Ron and Milo, Ron},
+  journal={Nature medicine},
+  volume={27},
+  number={1},
+  pages={45--48},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
