--- a/gk.bib
+++ b/gk.bib
@@ -29998,3 +29998,23 @@
   year={2021},
   publisher={Nature Publishing Group US New York}
 }
+@article{liang2021human,
+  title={The human virome: assembly, composition and host interactions},
+  author={Liang, Guanxiang and Bushman, Frederic D},
+  journal={Nature Reviews Microbiology},
+  volume={19},
+  number={8},
+  pages={514--527},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+@article{sender2016revised,
+  title={Revised estimates for the number of human and bacteria cells in the body},
+  author={Sender, Ron and Fuchs, Shai and Milo, Ron},
+  journal={PLoS biology},
+  volume={14},
+  number={8},
+  pages={e1002533},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
