--- a/gk.bib
+++ b/gk.bib
@@ -30018,3 +30018,13 @@
   year={2016},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+@article{pinsoneault2007detecting,
+  title={Detecting random, partially random, and nonrandom Minnesota Multiphasic Personality Inventory-2 protocols.},
+  author={Pinsoneault, Terry B},
+  journal={Psychological assessment},
+  volume={19},
+  number={1},
+  pages={159},
+  year={2007},
+  publisher={American Psychological Association}
+}
