--- a/gk.bib
+++ b/gk.bib
@@ -30028,3 +30028,13 @@
   year={2007},
   publisher={American Psychological Association}
 }
+@article{mcgrath2010evidence,
+  title={Evidence for response bias as a source of error variance in applied assessment.},
+  author={McGrath, Robert E and Mitchell, Matthew and Kim, Brian H and Hough, Leaetta},
+  journal={Psychological bulletin},
+  volume={136},
+  number={3},
+  pages={450},
+  year={2010},
+  publisher={American Psychological Association}
+}
