--- a/gk.bib
+++ b/gk.bib
@@ -30038,3 +30038,11 @@
   year={2010},
   publisher={American Psychological Association}
 }
+@article{arias2023detecting,
+  title={Detecting non-content-based response styles in survey data: An application of mixture factor analysis},
+  author={Arias, V{\'\i}ctor B and Ponce, Fernando P and Garrido, Luis E and Nieto-Ca{\~n}averas, Mar{\'\i}a Dolores and Mart{\'\i}nez-Molina, Agust{\'\i}n and Arias, Benito},
+  journal={Behavior Research Methods},
+  pages={1--17},
+  year={2023},
+  publisher={Springer}
+}
