--- a/gk.bib
+++ b/gk.bib
@@ -30046,4 +30046,13 @@
   year={2023},
   publisher={Springer}
 }
-
+@article{lee2009search,
+  title={In search of homo economicus: Cognitive noise and the role of emotion in preference consistency},
+  author={Lee, Leonard and Amir, On and Ariely, Dan},
+  journal={Journal of consumer research},
+  volume={36},
+  number={2},
+  pages={173--187},
+  year={2009},
+  publisher={The University of Chicago Press}
+}
