--- a/gk.bib
+++ b/gk.bib
@@ -30056,3 +30056,23 @@
   year={2009},
   publisher={The University of Chicago Press}
 }
+@article{rentfrow2011structure,
+  title={The structure of musical preferences: a five-factor model.},
+  author={Rentfrow, Peter J and Goldberg, Lewis R and Levitin, Daniel J},
+  journal={Journal of personality and social psychology},
+  volume={100},
+  number={6},
+  pages={1139},
+  year={2011},
+  publisher={American Psychological Association}
+}
+@article{lee2015money,
+  title={Money, time, and the stability of consumer preferences},
+  author={Lee, Leonard and Lee, Michelle P and Bertini, Marco and Zauberman, Gal and Ariely, Dan},
+  journal={Journal of Marketing Research},
+  volume={52},
+  number={2},
+  pages={184--199},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
