--- a/gk.bib
+++ b/gk.bib
@@ -30076,3 +30076,23 @@
   year={2015},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
+@article{sani2021human,
+  title={The human endogenous attentional control network includes a ventro-temporal cortical node},
+  author={Sani, Ilaria and Stemmann, Heiko and Caron, Bradley and Bullock, Daniel and Stemmler, Torsten and Fahle, Manfred and Pestilli, Franco and Freiwald, Winrich A},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={360},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+@article{buckner2019brain,
+  title={The brain’s default network: updated anatomy, physiology and evolving insights},
+  author={Buckner, Randy L and DiNicola, Lauren M},
+  journal={Nature Reviews Neuroscience},
+  volume={20},
+  number={10},
+  pages={593--608},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
