--- a/gk.bib
+++ b/gk.bib
@@ -30096,3 +30096,13 @@
   year={2019},
   publisher={Nature Publishing Group UK London}
 }
+@article{andrews2014default,
+  title={The default network and self-generated thought: Component processes, dynamic control, and clinical relevance},
+  author={Andrews-Hanna, Jessica R and Smallwood, Jonathan and Spreng, R Nathan},
+  journal={Annals of the new York Academy of Sciences},
+  volume={1316},
+  number={1},
+  pages={29--52},
+  year={2014},
+  publisher={Wiley Online Library}
+}
