--- a/gk.bib
+++ b/gk.bib
@@ -30106,3 +30106,12 @@
   year={2014},
   publisher={Wiley Online Library}
 }
+@article{smallwood2015science,
+  title={The science of mind wandering: Empirically navigating the stream of consciousness},
+  author={Smallwood, Jonathan and Schooler, Jonathan W},
+  journal={Annual review of psychology},
+  volume={66},
+  pages={487--518},
+  year={2015},
+  publisher={Annual Reviews}
+}
