--- a/gk.bib
+++ b/gk.bib
@@ -30115,3 +30115,10 @@
   year={2015},
   publisher={Annual Reviews}
 }
+@book{LazBerMcP48,
+  author         = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
+  publisher      = {Inter-university Consortium for Political and Social Research [distributor]},
+  title          = {Elmira Community Study},
+  doi            = {10.3886/ICPSR07200.v1}, 
+  year           = {1948 (2006)}
+}
