--- a/gk.bib
+++ b/gk.bib
@@ -30122,3 +30122,13 @@
   doi            = {10.3886/ICPSR07200.v1}, 
   year           = {1948 (2006)}
 }
+@article{kahneman1991anomalies,
+  title={Anomalies: The endowment effect, loss aversion, and status quo bias},
+  author={Kahneman, Daniel and Knetsch, Jack L and Thaler, Richard H},
+  journal={Journal of Economic perspectives},
+  volume={5},
+  number={1},
+  pages={193--206},
+  year={1991},
+  publisher={American Economic Association}
+}
