--- a/gk.bib
+++ b/gk.bib
@@ -30132,3 +30132,13 @@
   year={1991},
   publisher={American Economic Association}
 }
+@article{godefroid2023measure,
+  title={How to measure the status quo bias? A review of current literature},
+  author={Godefroid, Marie-E and Plattfaut, Ralf and Niehaves, Bj{\"o}rn},
+  journal={Management Review Quarterly},
+  volume={73},
+  number={4},
+  pages={1667--1711},
+  year={2023},
+  publisher={Springer}
+}
