--- a/gk.bib
+++ b/gk.bib
@@ -30142,3 +30142,12 @@
   year={2023},
   publisher={Springer}
 }
+@article{samuelson1988status,
+  title={Status quo bias in decision making},
+  author={Samuelson, William and Zeckhauser, Richard},
+  journal={Journal of risk and uncertainty},
+  volume={1},
+  pages={7--59},
+  year={1988},
+  publisher={Springer}
+}
