--- a/gk.bib
+++ b/gk.bib
@@ -30151,3 +30151,11 @@
   year={1988},
   publisher={Springer}
 }
+@incollection{mercier2022confirmation,
+  title={Confirmation bias--myside bias},
+  author={Mercier, Hugo},
+  booktitle={Cognitive illusions},
+  pages={78--91},
+  year={2022},
+  publisher={Routledge}
+}
