--- a/gk.bib
+++ b/gk.bib
@@ -30159,3 +30159,13 @@
   year={2022},
   publisher={Routledge}
 }
+@article{mcfadden2001economic,
+  title={Economic choices},
+  author={McFadden, Daniel},
+  journal={American economic review},
+  volume={91},
+  number={3},
+  pages={351--378},
+  year={2001},
+  publisher={American Economic Association}
+}
