--- a/gk.bib
+++ b/gk.bib
@@ -30169,3 +30169,13 @@
   year={2001},
   publisher={American Economic Association}
 }
+@article{graham2023measuring,
+  title={Measuring misperceptions?},
+  author={Graham, Matthew H},
+  journal={American Political Science Review},
+  volume={117},
+  number={1},
+  pages={80--102},
+  year={2023},
+  publisher={Cambridge University Press}
+}
