--- a/gk.bib
+++ b/gk.bib
@@ -30179,3 +30179,33 @@
   year={2023},
   publisher={Cambridge University Press}
 }
+@article{stettler2009representations,
+  title={Representations of odor in the piriform cortex},
+  author={Stettler, Dan D and Axel, Richard},
+  journal={Neuron},
+  volume={63},
+  number={6},
+  pages={854--864},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{sosulski2011distinct,
+  title={Distinct representations of olfactory information in different cortical centres},
+  author={Sosulski, Dara L and Bloom, Maria Lissitsyna and Cutforth, Tyler and Axel, Richard and Datta, Sandeep Robert},
+  journal={Nature},
+  volume={472},
+  number={7342},
+  pages={213--216},
+  year={2011},
+  publisher={Nature Publishing Group UK London}
+}
+@article{luo2010generating,
+  title={Generating sparse and selective third-order responses in the olfactory system of the fly},
+  author={Luo, Sean X and Axel, Richard and Abbott, LF},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={107},
+  number={23},
+  pages={10713--10718},
+  year={2010},
+  publisher={National Acad Sciences}
+}
