--- a/gk.bib
+++ b/gk.bib
@@ -30209,3 +30209,13 @@
   year={2010},
   publisher={National Acad Sciences}
 }
+@article{caron2013random,
+  title={Random convergence of olfactory inputs in the Drosophila mushroom body},
+  author={Caron, Sophie JC and Ruta, Vanessa and Abbott, Larry F and Axel, Richard},
+  journal={Nature},
+  volume={497},
+  number={7447},
+  pages={113--117},
+  year={2013},
+  publisher={Nature Publishing Group UK London}
+}
