--- a/gk.bib
+++ b/gk.bib
@@ -30219,3 +30219,22 @@
   year={2013},
   publisher={Nature Publishing Group UK London}
 }
+@article{heams2014randomness,
+  title={Randomness in biology},
+  author={Heams, Thomas},
+  journal={Mathematical Structures in Computer Science},
+  volume={24},
+  number={3},
+  pages={e240308},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+@article{ilan2020order,
+  title={Order through disorder: the characteristic variability of systems},
+  author={Ilan, Yaron},
+  journal={Frontiers in Cell and Developmental Biology},
+  volume={8},
+  pages={495391},
+  year={2020},
+  publisher={Frontiers}
+}
